[package]
name = "pbf2txt"
version = "0.1.0"
authors = ["Haozhan Shi <jackson21182@gmail.com>"]
edition = "2021"
repository = "https://github.com/jackson211/pbf2txt"
homepage = "https://github.com/jackson211/pbf2txt"
documentation = "https://docs.rs/pbf2txt"
description = "Convert OSM PBF to text format"
license = "MIT OR Apache-2.0"
readme = "README.md"
keywords = ["cli", "osm", "pbf", "txt", "spatial"]
categories = ["command-line-utilities"]

[dependencies]
osmpbfreader = "0.15.2"
clap = { version = "3.1.18", features = ["derive"] }
